# ChangeLog for mail-mta/courier
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/courier/ChangeLog,v 1.124 2010/01/31 19:04:58 hanno Exp $

*courier-0.64.0 (31 Jan 2010)

  31 Jan 2010; Hanno Boeck <hanno@gentoo.org> +courier-0.64.0.ebuild:
  Version bump.

  07 Jan 2010; Brent Baude <ranger@gentoo.org> courier-0.62.2.ebuild:
  Marking courier-0.62.2 ppc for bug 292087

  01 Jan 2010; Raúl Porcel <armin76@gentoo.org> courier-0.62.2.ebuild:
  alpha/ia64/sparc stable wrt #292087

  26 Dec 2009; Peter Volkov <pva@gentoo.org> courier-0.59.0.ebuild,
  courier-0.60.0.ebuild, courier-0.61.1.ebuild, courier-0.61.2.ebuild,
  courier-0.62.2.ebuild, courier-0.63.0.ebuild:
  virtual/ghostscript->app-text/ghostscript-gpl: ghostscript-gpl is the only
  implementation left in the tree.

*courier-0.63.0 (07 Dec 2009)

  07 Dec 2009; Hanno Boeck <hanno@gentoo.org> +courier-0.63.0.ebuild:
  Version bump.

  01 Dec 2009; Markus Meier <maekke@gentoo.org> courier-0.62.2.ebuild:
  amd64/x86 stable, bug #292087

*courier-0.62.2 (31 Jul 2009)

  31 Jul 2009; Hanno Boeck <hanno@gentoo.org> +courier-0.62.2.ebuild:
  Version bump, some cleanup, get rid of checking FEATURES variable.

  04 May 2009; Hanno Boeck <hanno@gentoo.org> courier-0.61.2.ebuild:
  Don't redundantly set S and don't call filter-flags in global scope.

*courier-0.61.2 (04 May 2009)

  04 May 2009; Hanno Boeck <hanno@gentoo.org> +courier-0.61.2.ebuild:
  Version bump.

*courier-0.61.1 (22 Feb 2009)

  22 Feb 2009; Hanno Boeck <hanno@gentoo.org> +courier-0.61.1.ebuild:
  Version bump.

  20 Nov 2008; Hanno Boeck <hanno@gentoo.org> +files/courier-init-r2,
  courier-0.60.0.ebuild:
  Fix location of webmaild in init script, thanks to Mike Bryce in #225093.

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*courier-0.60.0 (21 Jul 2008)
